--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.4",
     "framer-motion": "^10.3.1",
     "hamburger-react": "^2.5.0",
+    "lightgallery": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-animations": "^0.3.2",
